<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.senproj.myminifigcollection3.EntryActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strWelcome" />

    <Button
        android:id="@+id/btnCatalogView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/strCatalogView"
        android:onClick="ViewMainCategories" />

    <Button
        android:id="@+id/btnCollectionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCatalogView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/strCollectionView"
        android:onClick="ViewCollectionMainCategories" />

</RelativeLayout>
