<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.senproj.myminifigcollection3.FigDetailActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/White"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelfigID_figDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/DkGrey"
            android:gravity="center_horizontal"
            android:text="@string/strFigID"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/labelBLfID_figDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/DkGrey"
            android:gravity="center_horizontal"
            android:text="@string/strBLFigID"
            android:textColor="@color/White" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/FigID_figDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Wheat"
            android:gravity="center_horizontal"
            android:textColor="@color/DkGrey" />

        <TextView
            android:id="@+id/BLFigID_figDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Wheat"
            android:gravity="center_horizontal"
            android:textColor="@color/DkGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" >

	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:contentDescription="@string/strMiniDetailImgDesc"
	        android:src="@drawable/sw445a" />
    </LinearLayout>

</RelativeLayout>